# open-setlist-stash

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE-4-PLAN.md  README.md  docker-compose.override.yml.example  docker-compose.yml  preview.html  pyproject.toml  requirements-dev.in  requirements.in
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
migrations/: 001_initial.sql  002_resolver.sql  003_email.sql  004_leagues.sql  005_poll_state.sql  006_pick5.sql  007_google_oauth.sql  008_comments.sql
scripts/: seed_leaderboard_demo.py  seed_tour.py
src/phish_game/: __init__.py  auth.py  auth_email.py  config.py  db.py  email.py  healthcheck.py  leaderboard.py  leagues.py  locks.py  logging_setup.py  mcp_client.py  migrate.py  predictions.py  resolve.py  scoring.py  server.py
src/phish_game/static/: style.css
src/phish_game/templates/: _leaderboard_table.html  account.html  auth_email.html  auth_email_sent.html  auth_login.html  auth_login_sent.html  auth_verify_error.html  base.html  index.html  leaderboard.html  league_dashboard.html  league_join.html  league_leaderboard.html  league_settings.html  leagues_list.html  leagues_new.html  predict.html  predicted.html  show_predictions.html
src/setlist_stash/: __init__.py  auth.py  auth_email.py  auth_google.py  blog.py  comments.py  completeness.py  config.py  db.py  email.py  healthcheck.py  leaderboard.py  leagues.py  locks.py  mcp_client.py  mcp_proxy.py  migrate.py  predictions.py  resolve.py  resolve_types.py  scoring.py  server.py
src/setlist_stash/static/: style.css
src/setlist_stash/templates/: _comments.html  _comments_list.html  _leaderboard_table.html  _league_card.html  about.html  account.html  account_handle.html  auth_email.html  auth_email_sent.html  auth_login.html  auth_login_sent.html  auth_verify_error.html  base.html  blog_index.html  blog_post.html  connect.html  index.html  leaderboard.html  league_dashboard.html  league_join.html  league_leaderboard.html  league_settings.html  leagues_list.html  leagues_new.html  predict.html  predicted.html  show_predictions.html  shows.html  stats.html  u_profile.html
src/tweezer_picks/: __init__.py  auth.py  auth_email.py  config.py  db.py  email.py  healthcheck.py  leaderboard.py  leagues.py  locks.py  mcp_client.py  migrate.py  predictions.py  resolve.py  server.py
src/tweezer_picks/templates/: _league_card.html  account.html  auth_email.html  auth_email_sent.html  auth_login.html  auth_login_sent.html  auth_verify_error.html  base.html  index.html  league_dashboard.html  league_join.html  leagues_list.html  leagues_new.html  show_assist.html
tests/: conftest.py  test_analytics.py  test_assist_gate.py  test_assist_route.py  test_auth_email.py  test_auth_email_route.py  test_auth_google.py  test_beta_notice.py  test_blog.py  test_comments.py  test_completeness.py  test_email_provider.py  test_gap_label.py  test_handle_rename.py  test_handle_route.py  test_healthz.py  test_leaderboard.py  test_leaderboard_route.py  test_league_leaderboard.py  test_league_routes.py  test_leagues.py  test_mcp_client.py  test_mcp_proxy.py  test_predict_validation.py  test_predictions_edit.py  test_resolve.py  test_resolve_setlist.py  test_scoring.py  test_setlist_group.py  test_venue_tz.py
