[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-setlist-stash"
version = "0.2.0"
description = "Setlist prediction game for Phish shows. Phase 4 of the Phish Data Platform."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Pete Stergion" }]
keywords = ["phish", "setlist", "prediction", "game", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "asyncpg==0.31.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.28",
    "itsdangerous==2.2.0",
    "python-dotenv==1.2.2",
    "aiosmtplib==4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "respx==0.23.1",
    "ruff==0.15.12",
    "mypy==1.20.2",
]

[project.scripts]
setlist-stash = "setlist_stash.server:main"
setlist-stash-resolve = "setlist_stash.resolve:main"
setlist-stash-healthcheck = "setlist_stash.healthcheck:main"

[project.urls]
Homepage = "https://github.com/pete-builds/open-setlist-stash"
Repository = "https://github.com/pete-builds/open-setlist-stash"
Issues = "https://github.com/pete-builds/open-setlist-stash/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
setlist_stash = ["py.typed", "templates/*.html", "static/*", "static/themes/*.css"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=setlist_stash",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["setlist_stash"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101",
    "S104", # binding 0.0.0.0 is intentional inside a container
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
mypy_path = ["src"]
files = ["src/setlist_stash"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
